[package]
name = "serde_pm"
version = "0.1.0"
authors = ["Vladislav Markushin <negigic@gmail.com>"]

[lib]
name = "serde_pm"

[workspace]
members = ["serde_pm_derive"]

[dependencies]
log = "0.3.9"
serde = "^1.0"
serde_derive = "^1.0"
env_logger = "0.3.1"
libc = "0.2.36"
rlibc = "1.0.0"
num-traits = "0.2"
serde_pm_derive = { path = "serde_pm_derive" }
error-chain = "0.12"
